update with upstream ocean/market

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -42,7 +42,7 @@ exclude_patterns:
   - '**/*.d.ts'
   - '**/@types/'
   - '**/_types.*'
-  - '**/*.stories.tsx'
-  - '**/*.test.tsx'
+  - '**/*.stories.*'
+  - '**/*.test.*'
   - '.storybook/'
   - '.jest/'
