--- a/package.json
+++ b/package.json
@@ -26,47 +26,48 @@
     "@coingecko/cryptoformat": "^0.5.4",
     "@loadable/component": "^5.15.2",
     "@oceanprotocol/art": "^3.2.0",
-    "@oceanprotocol/lib": "^2.4.0",
+    "@oceanprotocol/lib": "^2.5.2",
     "@oceanprotocol/typographies": "^0.1.0",
     "@oceanprotocol/use-dark-mode": "^2.4.3",
     "@tippyjs/react": "^4.2.6",
     "@urql/exchange-refocus": "^1.0.0",
     "@walletconnect/web3-provider": "^1.8.0",
-    "axios": "^1.1.3",
+    "axios": "^1.2.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "decimal.js": "^10.3.1",
+    "decimal.js": "^10.4.2",
     "dom-confetti": "^0.2.2",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "filesize": "^10.0.5",
     "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
+    "is-ipfs": "^7.0.3",
     "is-url-superb": "^6.1.0",
     "js-cookie": "^3.0.1",
     "match-sorter": "^6.3.1",
     "myetherwallet-blockies": "^0.1.1",
-    "next": "12.3.1",
+    "next": "13.0.5",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-clipboard.js": "^2.0.16",
-    "react-data-table-component": "^7.5.2",
-    "react-dom": "^18.1.0",
+    "react-data-table-component": "^7.5.3",
+    "react-dom": "^18.2.0",
     "react-dotdotdot": "^1.3.1",
-    "react-modal": "^3.15.1",
-    "react-paginate": "^8.1.3",
-    "react-select": "^5.4.0",
-    "react-spring": "^9.5.2",
+    "react-modal": "^3.16.1",
+    "react-paginate": "^8.1.4",
+    "react-select": "^5.6.1",
+    "react-spring": "^9.5.5",
     "react-tabs": "^5.1.0",
-    "react-toastify": "^9.0.4",
-    "remark": "^13.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-html": "^13.0.1",
+    "react-toastify": "^9.1.1",
+    "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1",
     "remove-markdown": "^0.5.0",
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
     "urql": "^3.0.3",
-    "web3": "^1.8.0",
-    "web3modal": "^1.9.9",
+    "web3": "^1.8.1",
+    "web3modal": "^1.9.10",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -77,37 +78,38 @@
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.3",
     "@types/js-cookie": "^3.0.2",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^18.8.5",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "@types/react-modal": "^3.13.1",
     "@types/react-paginate": "^7.1.1",
     "@types/remove-markdown": "^0.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "apollo": "^2.34.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.25.0",
+    "eslint": "^8.28.0",
     "eslint-config-oceanprotocol": "^2.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.7.2",
+    "eslint-plugin-testing-library": "^5.9.1",
     "https-browserify": "^1.0.0",
-    "husky": "^8.0.1",
-    "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.2.2",
-    "prettier": "^2.7.1",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
     "process": "^0.11.10",
-    "serve": "^14.0.1",
+    "serve": "^14.1.2",
     "stream-http": "^3.2.0",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "overrides": {
     "graphql": "15.8.0"
@@ -117,7 +119,7 @@
     "url": "https://github.com/oceanprotocol/market"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "browserslist": [
     ">0.2%",
