--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,30 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "ES2020",
-    "lib": ["dom", "ES2020"],
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "jsx": "preserve",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "baseUrl": ".", // This must be specified if "paths" is.
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "sourceMap": true,
-    "noImplicitAny": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
     "paths": {
+      "@components/*": ["./src/components/*"],
       "@shared/*": ["./src/components/@shared/*"],
       "@hooks/*": ["./src/@hooks/*"],
       "@context/*": ["./src/@context/*"],
       "@images/*": ["./src/@images/*"],
       "@utils/*": ["./src/@utils/*"],
       "@content/*": ["./@content/*"]
-    },
-    "baseUrl": ".",
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "skipLibCheck": true,
-    "allowJs": true,
-    "esModuleInterop": true,
-    "incremental": true
+    }
   },
-  "exclude": ["node_modules", ".next", "*.js"],
-  "include": ["./src/**/*", "./.jest/**/*", "./next-env.d.ts", "./content/**/*"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", ".next", "*.js"]
 }
